Add styling to remove-btn, remove underline, increase font, and make color red

--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -1,6 +1,9 @@
-.remove-button {
+.remove-btn {
+  color: red;
+  text-decoration: none;
   margin-right: 50px;
   float: right;
+  font-size: 115%;
 }
 
 .todo {
